--- a/BasicCoreProgram/BasicCoreProgram.csproj
+++ b/BasicCoreProgram/BasicCoreProgram.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CoinFlipper.cs" />
     <Compile Include="LeapYear.cs" />
+    <Compile Include="PowerOf2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
