--- a/BasicCoreProgram/BasicCoreProgram.csproj
+++ b/BasicCoreProgram/BasicCoreProgram.csproj
@@ -50,6 +50,7 @@
     <Compile Include="PrimeFactorization.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quotient&amp;RemainderCalculator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
