--- a/BasicCoreProgram/BasicCoreProgram.csproj
+++ b/BasicCoreProgram/BasicCoreProgram.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoinFlipper.cs" />
+    <Compile Include="EvenOrOddChecker.cs" />
     <Compile Include="HarmonicNumbers.cs" />
     <Compile Include="LeapYear.cs" />
     <Compile Include="PowerOf2.cs" />
