--- a/BasicCoreProgram/BasicCoreProgram.csproj
+++ b/BasicCoreProgram/BasicCoreProgram.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quotient&amp;RemainderCalculator.cs" />
     <Compile Include="SwapNumbers.cs" />
+    <Compile Include="VowelConsonantChecker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
